--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-flask
-flask-sqlalchemy
-flask-login
+flask==3.0.2
+flask-sqlalchemy==3.1.1
+flask-login==0.6.3
+numpy==1.26.4
+pandas==2.2.0
+yfinance==0.2.36
